--- a/api/pom.xml
+++ b/api/pom.xml
@@ -70,7 +70,16 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.5.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.13</version>
+        </dependency>
 
     </dependencies>
 
