--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.profiles.active=dev
+
+knife4j.enable=true
+knife4j.production=false
+knife4j.setting.language=en-US
+knife4j.setting.enableFilterMultipartApis=true
